--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		</div>
 		
 		<div class="nav-sm">
-			<img src="assets/img/menu.png" width="40px" height="40px" />
+			<ul>
+				<li><img src="assets/img/menu.png" width="40px" height="40px"/></li>
+			</ul>
 			<ul id="menu-expanded">
 				<li><a href="#top">Accueil</a></li>
 				<li><a href="#services">Services</a></li>
