--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
 				<li><a href="#services">Services</a></li>
 				<li><a href="#about">A propos</a></li>
 				<li><a href="#contact">Contact</a></li>
+				<li> 
+					<ul>
+						<li><strong>Stéphane Van Lierde</strong></li>
+						<li>Moniteur d'escalade.</li>
+					</ul>
+				</li>
 			</ul>
 		</div>
 		
 		<div class="nav-sm">
 			<ul>
 				<li><img src="assets/img/menu.png" width="40px" height="40px"/></li>
+				<li> 
+					<ul>
+						<li><strong>Stéphane Van Lierde</strong></li>
+						<li>Moniteur d'escalade.</li>
+					</ul>
+				</li>
 			</ul>
 			<ul id="menu-expanded">
 				<li><a href="#top">Accueil</a></li>
@@ -27,20 +39,18 @@
 				<li><a href="#about">A propos</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
+
 		</div>
 	</nav>
 
 
 		<!-- Main -->
 			<div id="main">
-
+<div class="divtest">
+</div>
 				<!-- Accueil -->
 					<section id="top">
-						<header>
-							<!--img src="assets/img/github.jpg"/-->
-							<h2><strong>Stéphane Van Lierde</strong></h2>
-							<h3>Moniteur d'escalade.</h3>
-						</header>
+					
 						<div id="slider">
 							<figure>
 								<img src="assets/img/couverture.jpg" />
