--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<!-- Accueil -->
 					<section id="top">
 					
-						<div id="slider">
+						<!--div id="slider">
 							<figure>
 								<img src="assets/img/couverture.jpg" />
 								<img src="assets/img/encadrement.jpg" />
@@ -59,7 +59,7 @@
 								<img src="assets/img/stageFalaise.jpg" />
 								<img src="assets/img/couverture.jpg" />
 							</figure>
-						</div>
+						</div-->
 						
 					</section>
 
