--- a/index.html
+++ b/index.html
@@ -1,37 +1,30 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Stephane Van Lierde</title>
+		<title>Stéphane Van Lierde</title>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Jockey+One|Julius+Sans+One|Jura|Marvel" rel="stylesheet">
 		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 	<body>
 	<nav>
-		<div>
-			<ul class="nav">
+		<div class="title">
+			<h3>Stéphane Van Lierde</h3>
+			<h4>Moniteur d'escalade</h4>
+		</div>
+	
+		<div class="nav">
+			<ul>
 				<li><a href="#top">Accueil</a></li>
 				<li><a href="#services">Services</a></li>
 				<li><a href="#about">A propos</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li> 
-					<ul>
-						<li><strong>Stéphane Van Lierde</strong></li>
-						<li>Moniteur d'escalade.</li>
-					</ul>
-				</li>
 			</ul>
 		</div>
 		
 		<div class="nav-sm">
 			<ul>
 				<li><img src="assets/img/menu.png" width="40px" height="40px"/></li>
-				<li> 
-					<ul>
-						<li><strong>Stéphane Van Lierde</strong></li>
-						<li>Moniteur d'escalade.</li>
-					</ul>
-				</li>
 			</ul>
 			<ul id="menu-expanded">
 				<li><a href="#top">Accueil</a></li>
