add title on navbar

--- a/index.html
+++ b/index.html
@@ -7,47 +7,35 @@
 		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 	<body>
-	<nav>
-		<div>
-			<ul class="nav">
-				<li><a href="#top">Accueil</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#about">A propos</a></li>
-				<li><a href="#contact">Contact</a></li>
-				<li> 
-					<ul>
-						<li><strong>Stéphane Van Lierde</strong></li>
-						<li>Moniteur d'escalade.</li>
-					</ul>
-				</li>
-			</ul>
-		</div>
+		<nav>
+			<div class="nav">
+				<ul>
+					<li class="title"><strong>Stéphane Van Lierde</strong> <span>Moniteur d'escalade</span></li>
+					<li><a href="#top">Accueil</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#about">A propos</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
 		
-		<div class="nav-sm">
-			<ul>
-				<li><img src="assets/img/menu.png" width="40px" height="40px"/></li>
-				<li> 
-					<ul>
-						<li><strong>Stéphane Van Lierde</strong></li>
-						<li>Moniteur d'escalade.</li>
-					</ul>
-				</li>
-			</ul>
-			<ul id="menu-expanded">
-				<li><a href="#top">Accueil</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#about">A propos</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
+			<div class="nav-sm">
+				<ul>
+					<li class="title"><strong>Stéphane Van Lierde</strong> <span>Moniteur d'escalade</span></li>
+					<li><img src="assets/img/menu.png" width="40px" height="40px"/></li>
+				</ul>
+				<ul id="menu-expanded">
+					<li><a href="#top">Accueil</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#about">A propos</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
 
-		</div>
-	</nav>
+			</div>
+		</nav>
 
 
 		<!-- Main -->
 			<div id="main">
-<div class="divtest">
-</div>
 				<!-- Accueil -->
 					<section id="top">
 					
