correction id + essai caroussel et design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<li class="title"><strong>Stéphane Van Lierde</strong> <span>Professionel de l'escalade</span></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href="#about">A propos</a></li>
-					<li><a href="#servies">Mes services</a></li>
+					<li><a href="#services">Mes services</a></li>
 					<!--li><a href="#services-formation">Formations professionnelles</a></li>
 					<li><a href="#services-ouverture">Services d'ouverture</a></li>
 					<li><a href="#services-moniteur">Services de moniteur</a></li-->
@@ -135,6 +135,8 @@
 								<h2>Formation ouverture de voie en SAE - certifiée CAB </h2>
 							</header>
 
+							<img src="assets/img/formation-ouverture.jpg" alt="Smiley face" width="25%">
+
 							<p>Nouveauté 2018, la formation d'ouverture de voie vous donne accès à un brevet professionel d'ouvreur qui vous permettra d'ouvrir des voies dans différentes salles d'escalade. Cette formation est axée sur la sécurité pour vous permettre de faire ce travail en toute sécurité. </p>
 
 							<p>Ces formations sont planifiées dans différentes salle d'escalade. Planification à venir. N'hésitez pas à me contacter si vous êtes intéressés.</p>
@@ -153,7 +155,7 @@
 							<h2>A propos de moi</h2>
 						</header>
 							
-						<img src="assets/img/ouverture.jpg"/>
+						<!--img src="assets/img/ouverture.jpg"/-->
 
 							<h3>L'escalade, une passion</h3>
 							<p>C'est à l'âge de 7 ans que j'ai commencé à apprécier l'escalade sur les falaises de Beez. En grandissant, cette passion n'a fait que grandir à tel point que j'en ai fait mon métier. </p>
